# attune-rag

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: spec-scaffold.md
.claude/hooks/: .canonical-sha256  _bootstrap.py  _resume_prompt.py  _sdk_gate.py  _state.py  _transcript_size.py  compact_warning.py  format_on_save.py  security_guard.py  spec_audit.py  spec_orient.py
.github/workflows/: benchmark.yml  cadence-report.yml  downstream-attune-gui.yml  freeze.yml  lint.yml  lockfile.yml  perf.yml  publish.yml  security-scan.yml  spec-status-reminder.yml  tests.yml
.help/: features.yaml
.help/templates/benchmark/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/cli/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/corpus/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/dashboard/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/editor/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/eval/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/expander/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/measure/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/pipeline/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/prompts/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/provenance/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/providers/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/reranker/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
.help/templates/retrieval/: comparison.md  concept.md  error.md  faq.md  note.md  quickstart.md  reference.md  task.md  tip.md  troubleshooting.md  warning.md
artifacts/: after-selection-criteria.json  before-selection-criteria.json
artifacts/calibration/: ground-truth-2026-05-15-v2.md  ground-truth-2026-05-15-v2.template.md  ground-truth-2026-05-15.md  ground-truth-2026-05-15.template.md  ground-truth-2026-05-16.md  ground-truth-2026-05-16.template.md  thinking-2026-05-15-v2.json  thinking-2026-05-15.json  thinking-2026-05-16.json  variance-2026-05-16.json
docs/: POLICY.md  USER_CORPUS_GUIDE.md
docs/rag/: faithfulness-thinking-calibration.md  native-citations.md
docs/retros/: 2026-05-21-alias-sweep.md
docs/specs/: ROADMAP-v1.md  dashboard-v0.2.0.md
docs/specs/alias-expansion-sweep/: README.md  tasks.md
docs/specs/alias-overlap-remediation/: README.md  (+6 more)
scripts/: aggregate_perf_baseline.py  build_calibration_labeling_kit.py  changelog_cadence.py  check_freeze.py  check_thresholds.py  format_perf_delta.py  measure_abstention_distributions.py  measure_baseline_variance.py  measure_corpus.py  measure_judge_variance.py  measure_perf_baseline.py  measure_reranker.py  probe_v2_cache_control.py  probe_v2v3.sh  probe_v3_doc_count_ceiling.py  score_against_ground_truth.py  security_scan.py  smoke_check_gate.sh  validate_gated_fusion.py  validate_transformer_retriever.py
site/: README.md  brand.css  build_favicon.py  build_help.py  build_og.py  build_sitemap.py  index.html  robots.txt  sitemap.xml  vercel.json
site/help/: index.html  search-index.json  search.js
src/attune_rag/: __init__.py  _scoring.py  auth.py  benchmark.py  cli.py  embedding.py  expander.py  hybrid.py  measure_corpus.py  model_tiers.py  pipeline.py  prompts.py  provenance.py  reranker.py  retrieval.py  transformer.py
tests/: README.md  conftest.py
tests/golden/: citations_response.json  measure_corpus_bundled.golden.md  queries.yaml  queries_corpus_b.yaml  queries_corpus_b_hard.yaml  queries_corpus_c_hard.yaml  queries_extended.yaml  queries_negative.yaml  queries_paraphrased.yaml  test_golden.py  test_measure_corpus_bundled.py  test_measure_corpus_module_bundled.py
tests/unit/: test_abstention.py  test_aggregate_perf_baseline.py  test_api_surface.py  test_auth_routing.py  test_benchmark.py  test_benchmark_negatives.py  test_benchmark_thinking.py  test_calibration_scripts.py  test_changelog_cadence.py  test_check_freeze.py  test_check_thresholds.py  test_claude_hooks_behavior.py  test_claude_hooks_drift.py  test_cli.py  test_contracts.py  test_corpus_alias_warning.py  test_corpus_attune_help.py  test_corpus_directory.py  test_corpus_indices.py  test_dashboard_cli.py  test_dashboard_refresh.py  test_dashboard_render.py  test_dashboard_show.py  test_directory_corpus_extra_aliases_file.py  test_editor_autocomplete.py  test_editor_lint.py  test_editor_references.py  test_editor_rename.py  test_editor_rename_shims.py  test_editor_schema.py  test_eval_bench_prompts.py  test_eval_faithfulness.py  test_expander_reranker.py  test_format_perf_delta.py  test_hybrid_retrieval.py  test_measure_abstention_distributions.py  test_measure_baseline_variance.py  test_measure_corpus.py  test_measure_corpus_module.py  test_measure_judge_variance.py  (+12 more)
(+320 files in other folders)
