[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attune-rag"
version = "0.1.20"
description = "Lightweight, LLM-agnostic RAG pipeline with pluggable corpora. Works with Claude, Gemini, or any LLM."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Patrick Roebuck", email = "admin@smartaimemory.com"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "claude",
    "gemini",
    "grounding",
    "provenance",
    "attune",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "structlog>=24.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
attune-help = ["attune-help>=0.10.1,<0.11"]
claude = ["anthropic>=0.95,<1.0"]
gemini = ["google-genai>=1.0,<2.0"]
# Maintainer tooling — the docs/help authoring CLI used to regenerate
# .help/templates/<feature>/{concept,reference,task}.md with the polish
# pass. 0.13.0 is the floor because earlier versions skipped polish (the
# unpolished output shipped as #20 was reverted in `revert(help): restore
# polished benchmark templates`).
author = ["attune-author>=0.13.0"]
all = [
    "attune-help>=0.10.1,<0.11",
    "anthropic>=0.95,<1.0",
    "google-genai>=1.0,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "build>=1.0",
    "twine>=5.0",
    "attune-help>=0.10.1,<0.11",
    "attune-author>=0.13.0",
    "anthropic>=0.95,<1.0",
    "google-genai>=1.0,<2.0",
]

[project.scripts]
attune-rag = "attune_rag.cli:main"

[project.urls]
Homepage = "https://github.com/Smart-AI-Memory/attune-rag"
Repository = "https://github.com/Smart-AI-Memory/attune-rag"
Documentation = "https://github.com/Smart-AI-Memory/attune-rag/blob/main/README.md"
Changelog = "https://github.com/Smart-AI-Memory/attune-rag/blob/main/CHANGELOG.md"
Issues = "https://github.com/Smart-AI-Memory/attune-rag/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"attune_rag.dashboard" = ["templates/*.html"]
"attune_rag.editor" = ["template_schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -m 'not live'"
markers = [
    "live: opt-in tests that hit a real LLM API. Skipped by default; require ANTHROPIC_API_KEY and any test-specific env flags.",
]

[tool.coverage.run]
source = ["src/attune_rag"]
branch = true
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 77
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "BLE", "UP"]

[tool.ruff.lint.per-file-ignores]
# Rich markup strings in dashboard and CLI help text can't be shortened cleanly
"src/attune_rag/dashboard/*.py" = ["E501", "BLE001"]
"src/attune_rag/cli.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
