[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attune-rag"
version = "0.7.0"
description = "Lightweight, LLM-agnostic RAG pipeline with pluggable corpora. Works with Claude, Gemini, or any LLM."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Patrick Roebuck", email = "admin@smartaimemory.com"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "claude",
    "gemini",
    "grounding",
    "provenance",
    "attune",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "structlog>=24.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
attune-help = ["attune-help>=0.10.1,<0.11"]
claude = [
    "anthropic>=0.95,<1.0",
    # Subscription-routed judge calls under Claude Code
    # (attune_rag.auth). 0.1.63 floor = output_format /
    # ResultMessage.structured_output support.
    "claude-agent-sdk>=0.1.63",
]
gemini = ["google-genai>=1.0,<2.0"]
# Maintainer tooling — the docs/help authoring CLI used to regenerate
# .help/templates/<feature>/{concept,reference,task}.md with the polish
# pass. 0.13.0 is the floor because earlier versions skipped polish (the
# unpolished output shipped as #20 was reverted in `revert(help): restore
# polished benchmark templates`).
author = ["attune-author>=0.13.0"]
# Hybrid/dense retrieval. model2vec ships static (distilled) embeddings:
# no torch, no GPU, offline, millisecond encode — keeps attune-rag
# dependency-light while adding semantic recall for unstructured/unseen
# corpora. Opt-in: KeywordRetriever remains the default.
embeddings = ["model2vec>=0.3,<1.0"]
# Heavyweight opt-in dense retrieval: real transformer embeddings via
# sentence-transformers (pulls torch, ~GB). For arbitrary corpora where
# paraphrase recall matters and the torch-free static embeddings fall
# short. Embedding-primary; never a default. See TransformerRetriever.
transformers = ["sentence-transformers>=3.0,<6.0"]
# `all` = every extra, including the heavyweight [transformers] tier
# (pulls torch, ~GB). For a dependency-light install, choose extras
# explicitly rather than `[all]`.
all = [
    "attune-help>=0.10.1,<0.11",
    "anthropic>=0.95,<1.0",
    "google-genai>=1.0,<2.0",
    "model2vec>=0.3,<1.0",
    "sentence-transformers>=3.0,<6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "pre-commit>=3.5",
    "build>=1.0",
    "twine>=5.0",
    "attune-help>=0.10.1,<0.11",
    "attune-author>=0.13.0",
    "anthropic>=0.95,<1.0",
    "google-genai>=1.0,<2.0",
]

[project.scripts]
attune-rag = "attune_rag.cli:main"
attune-rag-measure = "attune_rag.measure_corpus:main"
attune-rag-benchmark = "attune_rag.benchmark:main"

[project.urls]
Homepage = "https://attune-rag.dev"
Repository = "https://github.com/Smart-AI-Memory/attune-rag"
Documentation = "https://attune-rag.dev"
Changelog = "https://github.com/Smart-AI-Memory/attune-rag/blob/main/CHANGELOG.md"
Issues = "https://github.com/Smart-AI-Memory/attune-rag/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"attune_rag" = ["py.typed"]
"attune_rag.dashboard" = ["templates/*.html"]
"attune_rag.editor" = ["template_schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -m 'not live'"
markers = [
    "live: opt-in tests that hit a real LLM API. Skipped by default; require ANTHROPIC_API_KEY and any test-specific env flags.",
]

[tool.coverage.run]
source = ["src/attune_rag"]
branch = true
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 77
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "BLE", "UP"]

[tool.ruff.lint.per-file-ignores]
# Rich markup strings in dashboard and CLI help text can't be shortened cleanly
"src/attune_rag/dashboard/*.py" = ["E501", "BLE001"]
"src/attune_rag/cli.py" = ["E501"]
# Embedded CSS/HTML template strings in the help-site builder can't be
# cleanly wrapped without hurting readability (same rationale as above).
"site/build_help.py" = ["E501"]
# Diagnostic runners insert the repo `src/` onto sys.path before importing
# attune_rag — imports must follow the path manipulation, so E402 is expected.
"docs/specs/embedding-retriever/run_diagnostic_*.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py310"]
